--- a/mblog-web/src/main/webapp/assets/css/style.css
+++ b/mblog-web/src/main/webapp/assets/css/style.css
@@ -180,16 +180,17 @@ label {font-weight: normal;}
 .stream-blank {height: 15px; border-bottom: 1px solid #eee; background-color: #f6f6f6;}
 
 .stream-item { margin: 0; border-bottom: 1px solid #ebebeb; padding: 15px; position: relative;}
+
 /*首页文章触发背景*/
 .stream-item:hover {
-  transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  /* Firefox 4 */
-  -webkit-transition: all 0.2s;
-  /* Safari 和 Chrome */
-  -o-transition: all 0.2s;
-  background-color: #fff;
-  box-shadow: 0 0px 5px 2px rgba(0, 0, 0, 0.2);	
+	transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-webkit-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	background-color: #fff;
+	padding-right: 23px!important;
+	border-right: 2px solid #00aed1;
+	/*box-shadow: 0 0px 5px 2px rgba(0, 0, 0, 0.2);*/
 }
 
 .stream-item .summary { overflow: hidden; padding: 0; /*border-left: 1px solid #f3f3f3;*/ }
