--- a/mblog-web/src/main/webapp/assets/css/style.css
+++ b/mblog-web/src/main/webapp/assets/css/style.css
@@ -183,14 +183,13 @@ label {font-weight: normal;}
 
 /*首页文章触发背景*/
 .stream-item:hover {
-	transition: all 0.2s;
-	-moz-transition: all 0.2s;
-	-webkit-transition: all 0.2s;
-	-o-transition: all 0.2s;
 	background-color: #fff;
-	padding-right: 23px!important;
+	padding-right: 13px!important;
 	border-right: 2px solid #00aed1;
 	/*box-shadow: 0 0px 5px 2px rgba(0, 0, 0, 0.2);*/
+}
+.p-stream .stream-item:hover {
+	padding-right: 23px!important;
 }
 
 .stream-item .summary { overflow: hidden; padding: 0; /*border-left: 1px solid #f3f3f3;*/ }
