--- a/mblog-web/src/main/webapp/themes/default/inc/right.vm
+++ b/mblog-web/src/main/webapp/themes/default/inc/right.vm
@@ -42,7 +42,7 @@ var latest_li_template = '<li><div class="li-out"><span class="name"><a  href="{
 
 var tag_li_template	= '<li class="mb6"><a href="$base/tag/{0}/" class="tag" title="有{1}篇文章">{2}</a></li>';
 
-var hotUser_li_template = '<li class="img"><a  href="{1}"><img src="$base{0}" /></a></li>'
+var hotUser_li_template = '<li class="img"><a  href="{1}"><img src="$base{0}" class="img-circle"/></a></li>';
 
 seajs.use('sidebox', function (sidebox) {
 	sidebox.init({
