--- a/mblog-web/src/main/webapp/assets/css/style.css
+++ b/mblog-web/src/main/webapp/assets/css/style.css
@@ -18,8 +18,10 @@ body { background-color: #f6f6f6;}
 /* 触发图片旋转样式 */
 img { height: auto; max-width: 100%;}
 
-.img-circle {transition: 0.4s ease-in-out;-moz-transition: 0.4s ease-in-out;-webkit-transition: 0.4s ease-in-out;transform: rotate(0deg);-moz-transform: rotate(0deg);/* -webkit-transform: rotate(0deg); */}
+/*
+.img-circle {transition: 0.4s ease-in-out;-moz-transition: 0.4s ease-in-out;-webkit-transition: 0.4s ease-in-out;transform: rotate(0deg);-moz-transform: rotate(0deg);-webkit-transform: rotate(0deg);}
 .img-circle:hover{transform:rotate(-360deg); -moz-transform:rotate(-360deg);-webkit-transform:rotate(-360deg);}
+*/
 
 /*热门用户样式 */
 .hotusers { overflow: hidden; float: left; padding: 2px;}
