--- a/mblog-web/src/main/webapp/themes/admin/group/view.vm
+++ b/mblog-web/src/main/webapp/themes/admin/group/view.vm
@@ -22,6 +22,16 @@
                         <input type="text" name="key" class="form-control" value="$!{view.key}">
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label">导航栏状态：</label>
+                    <div class="col-lg-4">
+                        <select name="status" class="form-control" data-select="$!{view.status}">
+                            <option value="0">显示</option>
+                            <option value="1">隐藏</option>
+                        </select>
+                    </div>
+                </div>
+
 				<div class="form-group">
 					<div class="col-lg-9 col-lg-offset-3">
 						<button type="submit" class="btn btn-primary btn-small">提交</button>
