--- a/mblog-web/src/main/webapp/themes/admin/posts/list.vm
+++ b/mblog-web/src/main/webapp/themes/admin/posts/list.vm
@@ -19,14 +19,13 @@
     			<thead>
     				<tr>
     					<th width="50"><input type="checkbox" class="checkall"></div>
-    					<th width="80">#</th>
     					<th>文章标题</th>
     					<th>作者</th>
     					<th>发表日期</th>
-						<th>访问</th>
+						<th>访问数</th>
         				<th>推荐</th>
 						#if($shiro.hasPermission("posts:edit"))
-    						<th width="240"></th>
+    						<th width="200"></th>
 						#end
     				</tr>
     			</thead>
@@ -36,20 +35,12 @@
     					<td>
 							<input type="checkbox" name="id" value="${row.id}">
     					</td>
-                        <td class="text-center">${row.id}</td>
                         <td>##$string.abbreviate("$!{row.title}", 36)
 							<a href="$base/view/${row.id}" target="_blank">$!{row.title}</a>
 						</td>
     					<td>$!{row.author.username}</td>
     					<td>$date.format('yyyy-MM-dd', $row.created)</td>
-						<td>
-							#if(${row.privacy} == 0)
-                                <span class="label label-info">公开</span>
-							#else
-                                <span class="label label-default">私密</span>
-
-							#end
-						</td>
+						<td>${row.views}</td>
                         <td>
 							#if(${row.featured} > 0)
 								<span class="label label-info">置顶</span>
