重写部分权限操作,解决后台访问卡的问题

--- a/mblog-web/src/main/webapp/themes/admin/authMenus/list.vm
+++ b/mblog-web/src/main/webapp/themes/admin/authMenus/list.vm
@@ -25,8 +25,8 @@
                     #end
                 </tr>
                     #foreach($row in $list)
-                        #if(${row.parent.id})
-                            <tr id="${row.id}" pId="${row.parent.id}">
+                        #if(${row.parentId} > 0)
+                            <tr id="${row.id}" pId="${row.parentId}">
                         #else
                             <tr id="${row.id}">
                         #end
