--- a/mblog-web/src/main/webapp/themes/admin/inc/header.vm
+++ b/mblog-web/src/main/webapp/themes/admin/inc/header.vm
@@ -36,6 +36,7 @@
 <!-- nav -->
 <nav id="nav" class="nav-primary visible-lg nav-vertical" style="background-color: #233445;">
     <ul class="nav" data-spy="affix" data-offset-top="50">
+        <li><a href="/admin" nav="1"><i class="fa fa-dashboard icon-xlarge"></i>仪表盘</a></li>
         #foreach($menu in ${auth.findByParentId(2)})
             #if($shiro.hasPermission($menu.permission))
                 <li><a href="$base/$menu.url" nav="$menu.sort"><i class="$menu.icon"></i>$menu.name</a></li>
