--- a/mblog-web/src/main/webapp/themes/default/inc/params.vm
+++ b/mblog-web/src/main/webapp/themes/default/inc/params.vm
@@ -24,8 +24,8 @@ $!{site_metas}
 <script type="text/javascript" src="$base/assets/js/sea.config.js"></script>
 
 <!-- Favicons -->
-<link rel="apple-touch-icon-precomposed" href="http://mtons.com/assets/images/logo/m99.png"/>
-<link rel="shortcut icon" href="http://mtons.com/assets/images/logo/m.png"/>
+<link rel="apple-touch-icon-precomposed" href="http://mtons.com/dist/images/logo.png"/>
+<link rel="shortcut icon" href="http://mtons.com/dist/images/logo.png"/>
 
 <script type="text/javascript">
     var _base_path = '$!{base}';
