--- a/mblog-web/src/main/webapp/themes/macro.vm
+++ b/mblog-web/src/main/webapp/themes/macro.vm
@@ -140,9 +140,9 @@
 ## 文章附件显示
 #macro (albShow $att)
 	#if($att.store == 1)
-        <img src="$base/assets/images/spinner-overlay.png" data-original="${att.screenshot}"/>
+        <img src="$base/assets/images/spinner-overlay.png" data-original="${att.preview}"/>
 	#else
-        <img src="$base/assets/images/spinner-overlay.png" data-original="#resource(${att.screenshot})"/>
+        <img src="$base/assets/images/spinner-overlay.png" data-original="#resource(${att.preview})"/>
 	#end
 #end
 
